@@ -1,3 +1,10 @@
+Thu Nov 18 07:38:34 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * ace/Service_Config.cpp:
+
+          Distinguish between the existence of and the file permissions for
+          the default service configurator file (svc.conf).
+
 Thu Nov 18 07:10:26 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * examples/Logger/Acceptor-server/Logger_Acceptor_Server.mpc:
